Changes on the structure

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,6 +1,6 @@
 title=Title
 appTitle=ZYBC_probando
-appDescription=App Description
+appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
 
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
