fixed non working website from last commit

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -4,3 +4,5 @@ appDescription=A simple walkthrough app that explains the most important concept
 
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
+homePageTitle=Walkthrough
+helloPanelTitle=CEMOSA practicing
