--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -6,3 +6,4 @@ showHelloButtonText=Say Hello
 helloMsg=Hello {0}
 homePageTitle=Walkthrough
 helloPanelTitle=CEMOSA practicing
+openDialogButtonText=Say Hello With Dialog
