Aggregation Binding (NOT Finished)

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,3 +10,6 @@ homePageTitle=Walkthrough
 helloPanelTitle=CEMOSA practicing
 openDialogButtonText=Say Hello With Dialog
 dialogCloseButtonText=Ok
+
+# Invoice List
+invoiceListTitle=Invoices
