MOCK SERVER CONFIGURATION. Restored all files

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,6 +1,18 @@
+#App Description
 title=Title
 appTitle=ZYBC_probando
-appDescription=App Description
+appDescription=A simple walkthrough app that explains the most important concepts of SAPUI5
 
+#Hello Panel
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
+homePageTitle=Walkthrough
+helloPanelTitle=CEMOSA practicing
+openDialogButtonText=Say Hello With Dialog
+dialogCloseButtonText=Ok
+
+# Invoice List
+invoiceListTitle=Invoices
+invoiceStatusA=New
+invoiceStatusB=In Progress
+invoiceStatusC=Done
